--- a/forms/main.css
+++ b/forms/main.css
@@ -1,119 +1,444 @@
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: #29282D;;
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    background-color: #29292C;
+    color: #fff;
+    line-height: 1.42;
+    font-size: 16px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; 
 }
 
-h1 {
-    color: #FFFFFF;
-    font-size: 58px;
-line-height: 110%; 
-width: 505px;
-height: 193px;
-left: 390px;
-top: 255px;
+a {
+    color: inherit;
 }
 
-.promo__slogan {
-    width: 250px;
-height: 20px;
-left: 390px;
-top: 474px;
-color: #D3A557;
-font-size: 18px;
-line-height: 20px;
+ul{
+    padding: 0;
+    margin: 0;
 }
 
-button.promo__button{
-    font-family: Open Sans;
-  font-style: normal;
-  font-weight: bold;
-  border: 0;
-  border-radius: 3px;
-  width: 165px;
-  height: 52px;
-  background: #DFB56D;
-  box-shadow: 0px 8px 35px;
-  color: #FFFFFF;
-}
-.offers__title {
-    width: 545px;
-height: 49px;
-    font-size: 36px;
-    color: #FFFFFF;
-line-height: 49px;
+ul li {
+    list-style: none;
 }
 
-
-.tariff-card {
-    background: #FFFFFF;
-    width: 362px;
-    height: 449px;
-    border-radius: 0px 0px 5px 5px;
+h1, h2, h3, h4, h5 {
+    margin: 0;
+    font-weight: normal;
 }
 
-.button {
-    font-family: Open Sans;
+* {
+    box-sizing: border-box;
+}
+
+.main-padge-wrapper{
+    background: url("../img/css/lion-header.jpg") center top no-repeat, 
+    url("../img/css/bottom-pic.png") right bottom 307px no-repeat;
+
+}
+
+p{
+    margin-top: 0;
+}
+
+.container {
+    margin: 0 auto;
+    width: 1140px; 
+}
+
+.hero {
+    margin-bottom: 168px;
+}
+
+.header {
+    height: 120px;
+    position: relative;
+    margin-bottom: 156px;
+}
+
+.logo {
+    display: block;
+    position: absolute;
+    top: 44px;
+    left: 0px;
+    
+}
+
+.menu {
+    position: absolute;
+    top: 49px;
+    left: 262px;
+}
+
+.contacts__deck {
+    color: #999;
+    font-size: 11px;
+}
+
+.menu__item {
+    display: inline-block;
+    vertical-align: middle; 
+    margin-right: 50px; 
+}
+
+.menu__item--active .menu__link {
+    color: #D3A557;
+}
+
+.menu__link {
+    font-style: 14px;
+    text-decoration: none;
+}
+
+.menu__link:hover {
+    color: #D3A557;
+}
+
+.contacts {
+    position: absolute;
+    top: 30px;
+    right: 0px;
     font-style: normal;
+    text-align: right;
+}
+
+.contacts__phone {
+    text-decoration: none;
+    font-size: 26px;
+    margin-bottom: 4px;
+}
+
+.contacts__dropdown-title {
+    font-size: 13px;
+    text-decoration: underline;
+    color: #D3A557;
+}
+
+.hero__text-section {
+    width: 400px;
+}
+
+.here__title {
+    font-size: 48px;
     font-weight: bold;
-    border: 0;
-    border-radius: 3px;
-    width: 165px;
-    height: 52px;
-    background: #2B2B2B;
-    box-shadow: 0px 8px 35px;
-    color: #FFFFFF;  
+    line-height: 1.2;
+    margin-bottom: 18px;
+    margin-top: 2px;
 }
 
-ul.menu__list li{
-    display: inline-block;
-    margin-right: 54px;
+.hero__subtitle {
+    font-size: 18px;
+    color: #D3A557;
+    margin-bottom: 43px;
 }
 
-ul.offers__list li{
+.btn {
     display: inline-block;
-    margin-right: 27px;
+    background: #d3a556;
+    border-radius: 4px;
+    padding: 14px 33px;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 14;
+}
+
+.btn--color--ginger:hover {
+    background: #d3a556;
+    box-shadow: 0 0 25 0 rgba(223, 181, 109, .15);
+}
+
+.btn:hover {
+    background: #d3a556;
+}
+
+.btn--color--black {
+    background: #202123;
+}
+
+.btn--color--black:hover {
+    background: #d3a556;
+}
+
+.section {
+    margin-bottom: 125px;
+}
+
+.section__title {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 45px;
+}   
+
+.offers__item {
+    min-height: 470px;
+    background: #fff;
+    background-repeat: 4px;
+    display: inline-block;
+    margin-right: 22px;
+    width: 362px;
+    color: #010001;
+    overflow: hidden;
+}
+.offers__item:last-child {
+    margin-right: 0;
+}
+
+.offers__header {
+    min-height: 162px;
+    margin-bottom: 0px;
     position: relative;
 }
 
-h4 {
-    height: 33px;
-    color: #000000;
+.offers__header:before {
+    content: "";
+    width: 284px;
+    height: 284px;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: -123px;
+    right: -91px;
+    background: #ccc;
+}
+
+.offers__header-img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -44px;
+    margin-top: -32px;
+}
+
+.offers__content {
+    padding: 36px 30px;
+    color: #010001;
+    padding-top: 23px;
+}
+
+.offers__title {
+    font-weight: bold;
     font-size: 24px;
-    line-height: 33px;
+    margin-bottom: 19px;
 }
 
-
-.news__img {
-    width: 557px;
-height: 394px;
-position: relative;
-}
-
-.news__first-title {
-    width: 325px;
-    height: 49px;
-    font-size: 36px;
-    color: #FFFFFF;
-}
-
-ul.news__list li{
+.offers__prices-cell {
     display: inline-block;
+    vertical-align: top;
+    width: 122px;
     margin-right: 25px;
 }
 
-
-
-ul.paginator__list li{
-    display: inline-block;
-    margin-right: 24px;
+.offers__prices-cell:last-child {
+    margin-right: 0;
 }
 
-.paginator__link {
-    color: #FFFFFF;
+.offers__item-theme-grey .offers__header:before{
+    background: #a5a5a4;
 }
 
-.header .contacts {
+.offers__item-theme-blue .offers__header:before{
+    background: #556180;
+}
+
+.offers__item-theme-gold .offers__header:before{
+    background: #978455;
+}
+.offers__price {
+    font-size: 36px; 
+}
+
+.offers__price-desc {
+    color: #333;
+}
+
+.offers__prices {
+    margin-bottom: 50px;
+}
+
+.offers__btn-wrapper {
+    text-align: center;
+}
+
+.news {
+    margin-bottom: 68px;
+}
+
+.news__item {
+ display: inline-block;
+ width: 555px;
+ vertical-align: top;
+ position: relative;  
+ border-radius: 4px;
+ overflow: hidden;
+ margin-right: 24px;
+}
+
+.news__item:last-child {
+    margin-right: 0px; 
+}
+
+.news__cover {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .4; 
+}
+
+.news__text-content {
     position: absolute;
-    top:26px;
-    right: 369px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 25px 30px;
+    min-height: 140px;
+}
+
+.news__date {
+    font-size: 14px;
+    margin-bottom: 13px;
+}
+
+.news__title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.pager {
+    text-align: center;
+}
+
+.pager__display,.pager__list {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.pager__display  {
+margin-right: 26px;
+}
+
+.pager__item {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.pager__item--active .pager__link {
+    background: #353538;
+}
+
+.pager__link {
+    display: block;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    position: relative;
+    text-decoration: none;
+   font-weight: bold;
+   line-height: 32px;
+}
+
+.about:before, .about__desc{
+    display: inline-block;
+    vertical-align: top;
+
+}
+
+.about:before {
+    content: "";
+    width: 488px;
+    height: 502px;
+    background: url("../img/1padge/chess.jpg") center center / cover no-repeat;
+}
+
+.about__desc {
+    background: #202123;
+    padding: 68px 98px;
+    width: 780px;
+    margin-left: -142px;
+    margin-top: 166px;
+}
+
+.about__title {
+    font-weight: bold;
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+
+.about__desc-text {
+    margin-bottom: 42px;
+}
+
+.about__desc-text p {
+    margin-bottom: 20px;
+}
+
+.about__desc-text p:last-child {
+    margin-bottom: 0;
+}
+
+.footer-container__content {
+    border-top: 1px solid #353538;
+}
+
+.footer {
+    height: 152px;
+    position: relative;
+}
+
+.socials__item {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;   
+}
+
+.socials__items:last-child{
+    margin-right: 0;
+}
+
+.socials {
+    position: absolute;
+    top: 53px;
+    right: 300px;
+}
+
+.socials__link {
+    display: block;
+    text-decoration: none;
+    width: 36px;
+    height: 36px;
+    background: center center no-repeat;
+}
+
+.socials__item--icon--tg .socials__link {
+    background-image: url("../img/logo/telegram.png");
+}
+
+.socials__item--icon--tg .socials__link:hover {
+    background-image: url("../img/logo/telegram-hover.png");
+}
+
+.socials__item--icon--vk .socials__link {
+    background-image: url("../img/logo/vk.png");
+}
+
+.socials__item--icon--vk .socials__link:hover {
+    background-image: url("../img/logo/vk-hover.png");
+}
+
+.socials__item--icon--fb .socials__link {
+    background-image: url("../img/logo/facebook.png");
+}
+
+.socials__item--icon--fb .socials__link:hover {
+    background-image: url("../img/logo/facebook-hover.png");
+}
+
+.socials__item--icon--insta .socials__link {
+    background-image: url("../img/logo/instagram.png");
+}
+
+.socials__item--icon--insta .socials__link:hover {
+    background-image: url("../img/logo/instagram-hover.png");
 }
