--- a/forms/main.css
+++ b/forms/main.css
@@ -69,7 +69,7 @@ p{
     left: 262px;
 }
 
-.contacts__deck {
+.contacts__disc {
     color: #999;
     font-size: 11px;
 }
@@ -388,6 +388,7 @@ margin-right: 26px;
 .footer {
     height: 152px;
     position: relative;
+    
 }
 
 .socials__item {
