--- a/forms/main.css
+++ b/forms/main.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5 {
     box-sizing: border-box;
 }
 
-.main-padge-wrapper{
+.padge{
     background: url("../img/css/lion-header.jpg") center top no-repeat, 
     url("../img/css/bottom-pic.png") right bottom 307px no-repeat;
 
@@ -59,8 +59,7 @@ p{
     display: block;
     position: absolute;
     top: 44px;
-    left: 0px;
-    
+    left: 0px;   
 }
 
 .menu {
@@ -385,7 +384,7 @@ margin-right: 26px;
     border-top: 1px solid #353538;
 }
 
-.footer {
+.footer-container {
     height: 140x;
     position: relative;  
     margin-top: 12px;
