--- a/forms/main.css
+++ b/forms/main.css
@@ -49,23 +49,38 @@ p{
     margin-bottom: 168px;
 }
 
-.header {
+/* .header {
     height: 120px;
     position: relative;
     margin-bottom: 156px;
+} */
+
+.header {
+    height: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 156px;
 }
 
-.logo {
+/* .logo {
     display: block;
     position: absolute;
     top: 44px;
     left: 0px;   
-}
+} */
 
-.menu {
+/* .menu {
     position: absolute;
     top: 49px;
     left: 262px;
+} */
+
+.menu {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 98px;
+    flex: 1;
 }
 
 .contacts__disc {
@@ -84,7 +99,7 @@ p{
 }
 
 .menu__link {
-    font-style: 14px;
+    font-size: 14px;
     text-decoration: none;
 }
 
@@ -93,9 +108,14 @@ p{
 }
 
 .contacts {
-    position: absolute;
+    /* position: absolute;
     top: 30px;
-    right: 0px;
+    right: 0px; */
+    display: flex;
+    flex-direction: column;    
+    align-items: flex-end;
+    justify-content: center;
+
     font-style: normal;
     text-align: right;
 }
@@ -341,7 +361,6 @@ margin-right: 26px;
 .about:before, .about__desc{
     display: inline-block;
     vertical-align: top;
-
 }
 
 .about:before {
