--- a/forms/main.css
+++ b/forms/main.css
@@ -8,13 +8,18 @@ body {
     -moz-osx-font-smoothing: grayscale; 
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
 html, body {
     height: 100%;
 }
 
 .wrapper {
     overflow: hidden;
-    min-width: 1140px;
+    min-width: 1200px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -61,43 +66,43 @@ p{
     width: 1140px; 
 }
 
+.hero__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 600px;
+}
+
 .hero {
     margin-bottom: 168px;
 }
 
-/* .header {
-    height: 120px;
-    position: relative;
-    margin-bottom: 156px;
-} */
-
 .header {
-    /* height: 120px; */
     display: flex;
     justify-content: space-between;
+    position: relative;
     align-items: center;
-    margin-bottom: 153px;
-    padding: 31px 0;
+    margin-bottom: 30px;
+    padding-top: 45px;
 }
 
-/* .logo {
-    display: block;
-    position: absolute;
-    top: 44px;
-    left: 0px;   
-} */
-
-/* .menu {
-    position: absolute;
-    top: 49px;
-    left: 262px;
-} */
-
-.menu {
+.header__col {
     display: flex;
-    justify-content: flex-start;
-    margin-left: 98px;
-    flex: 1;
+    align-items: center;
+}
+
+.header__col--align--right {
+    justify-content: flex-end;
+}
+
+.logo {
+    display: block;
+    margin-right: 100px;
+}
+
+.contacts {
+    font-style: normal;
+    text-align: right;
 }
 
 .contacts__disc {
@@ -124,19 +129,6 @@ p{
     color: #D3A557;
 }
 
-.contacts {
-    /* position: absolute;
-    top: 30px;
-    right: 0px; */
-    display: flex;
-    flex-direction: column;    
-    align-items: flex-end;
-    justify-content: center;
-
-    font-style: normal;
-    text-align: right;
-}
-
 .contacts__phone {
     text-decoration: none;
     font-size: 26px;
@@ -150,7 +142,7 @@ p{
 }
 
 .hero__text-section {
-    width: 400px;
+    width: 38%;
 }
 
 .here__title {
@@ -206,27 +198,42 @@ p{
     margin-bottom: 45px;
 }   
 
+.offers {
+    display: flex;
+    justify-content: space-between;
+}
+
 .offers__item {
+    width: calc(100% / 3 - 18px);
+}
+
+.offer {
+    display: flex;
+    flex-direction: column;
     min-height: 470px;
     background: #fff;
     background-repeat: 4px;
-    display: inline-block;
-    margin-right: 22px;
-    width: 362px;
     color: #010001;
     overflow: hidden;
 }
-.offers__item:last-child {
+
+.offer__content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.offer__item:last-child {
     margin-right: 0;
 }
 
-.offers__header {
+.offer__header {
     min-height: 162px;
     margin-bottom: 0px;
     position: relative;
 }
 
-.offers__header:before {
+.offer__header:before {
     content: "";
     width: 284px;
     height: 284px;
@@ -238,7 +245,7 @@ p{
     background: #ccc;
 }
 
-.offers__header-img {
+.offer__header-img {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -246,75 +253,82 @@ p{
     margin-top: -32px;
 }
 
-.offers__content {
+.offer__content {
     padding: 36px 30px;
     color: #010001;
     padding-top: 23px;
 }
 
-.offers__title {
+.offer__title {
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 19px;
 }
 
-.offers__prices-cell {
-    display: inline-block;
-    vertical-align: top;
-    width: 122px;
-    margin-right: 25px;
+.offer__prices {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.offers__prices-cell:last-child {
-    margin-right: 0;
-}
-
-.offers__item-theme-grey .offers__header:before{
-    background: #a5a5a4;
-}
-
-.offers__item-theme-blue .offers__header:before{
-    background: #556180;
-}
-
-.offers__item-theme-gold .offers__header:before{
-    background: #978455;
-}
-.offers__price {
+.offer__price {
     font-size: 36px; 
 }
 
-.offers__price-desc {
+.offer__prices-cell {
+   margin-right: 25px;
+}
+
+.offer__prices-cell:last-child {
+    margin-right: 0;
+}
+
+.offer__item-theme-grey .offer__header:before{
+    background: #a5a5a4;
+}
+
+.offer__item-theme-blue .offer__header:before{
+    background: #556180;
+}
+
+.offer__item-theme-gold .offer__header:before{
+    background: #978455;
+}
+
+.offer__price-desc {
     color: #333;
 }
 
-.offers__prices {
-    margin-bottom: 50px;
-}
 
-.offers__btn-wrapper {
-    text-align: center;
+.offer__btn-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
 }
 
 .news {
     margin-bottom: 68px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .news__item {
- display: inline-flex;
- width: 555px;
- vertical-align: top;
- position: relative;  
- border-radius: 4px;
- overflow: hidden;
- margin-right: 24px;
+ height: 392px;
+ margin-right: 2%;
+ flex: 1;
 }
 
-.news__item:last-child {
+.single-news {
+    position: relative;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.single-news__item:last-child {
     margin-right: 0px; 
 }
 
-.news__cover {
+.single-news__cover {
     display: block;
     width: 100%;
     height: 100%;
@@ -322,7 +336,7 @@ p{
     opacity: .4; 
 }
 
-.news__text-content {
+.single-news__text-content {
     position: absolute;
     left: 0;
     right: 0;
@@ -331,34 +345,36 @@ p{
     min-height: 140px;
 }
 
-.news__date {
+.single-news__date {
     font-size: 14px;
     margin-bottom: 13px;
 }
 
-.news__title {
+.single-news__title {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 5px;
 }
 
 .pager {
-    text-align: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
-.pager__display,.pager__list {
-    display: inline-flex;
-    vertical-align: middle;
-}
-
-.pager__display  {
+.pager__display {
 margin-right: 26px;
 }
 
-.pager__item {
-    display: inline-block;
-    vertical-align: middle;
+.pager__list {
+    display: flex;
+    align-items: center;
 }
+
+.pager__item {
+    text-align: center;
+}
+
 
 .pager__item--active .pager__link {
     background: #353538;
@@ -374,24 +390,26 @@ margin-right: 26px;
    font-weight: bold;
    line-height: 32px;
 }
+.about {
+    display: flex;
+}
 
 .about:before, .about__desc{
-    display: inline-block;
-    vertical-align: top;
+    border-radius: 4px;
 }
 
 .about:before {
     content: "";
     width: 488px;
     height: 502px;
-    border-radius: 4px;
+    display: block;
     background: url("../img/1padge/chess.jpg") center center / cover no-repeat;
 }
 
 .about__desc {
     background: #202123;
     padding: 68px 98px;
-    width: 780px;
+    max-width: 780px;
     margin-left: -134px;
     margin-top: 109px;
     border-radius: 5px;
@@ -421,33 +439,43 @@ margin-right: 26px;
 }
 
 .footer-container {
-    /* height: 140x;
+    margin-top: auto;
+}
+
+.footer-container__section {
+    height: 140px;
+    margin-top: 12px; 
+}
+
+.footer {
     position: relative;  
-    margin-top: 12px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 45px 0;
+}
+
+.footer__col{
+    display: flex;
+    align-items: center;
+}
+
+.footer__col--align--right {
+    justify-content: flex-end;
 }
 
 .socials__item {
     display: inline-block;
     vertical-align: middle;
-    margin-right: 10px;   
+    margin-right: 6px;   
+}
+.socials {
+    margin-right: 74px;
 }
 
 .socials__items:last-child{
     margin-right: 0;
 }
 
-.socials {
-    /* position: absolute;
-    top: 41px;
-    right: 250px; */
-    display: flex;
-    margin-right: 62px;
-
-}
 
 .socials__link {
     display: block;
@@ -487,4 +515,180 @@ margin-right: 26px;
 
 .socials__item--icon--insta .socials__link:hover {
     background-image: url("../img/logo/instagram-hover.png");
+}
+
+
+
+/* servises padge */
+
+.top-line {
+    min-height: 415px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 25px;
+    background: #202123 url(../img/css/lion-head-wide.jpg) right 25% top no-repeat;
+}
+
+.header {
+    padding-top: 25px;
+}
+
+.top-line__container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.padge__title {
+    font-size: 72px;
+    line-height: 1;
+    font-weight: bold;
+}
+
+.breadcrums__list {
+display: flex;
+align-items: center;
+}
+
+.breadcrums__link {
+    color: #dfb56d;
+    font-size: 14px; 
+}
+
+.breadcrums__item {
+    display: flex;
+    align-items: center;
+}
+
+.breadcrums__item--active .breadcrums__link  {
+    color: #999999;
+    text-decoration: none;
+}
+
+.breadcrums__item:after {
+    content: " / ";
+    color: #999;
+}
+
+.breadcrums__item:last-child:after {
+    display: none;
+}
+
+.page__content {
+background: #ffffff;
+color:  #818181;
+padding: 110px 0;
+}
+
+.services {
+margin-bottom: 65px;
+}
+
+.service {
+    display: flex;
+    padding: 58px 43px;
+    text-decoration: none;
+}
+
+.service:hover {
+    background: #f4f5f5;
+}
+
+.service:hover .service__btn{
+    background: #dfb56d;
+}
+
+.pager--theme--light {
+    color: #202123;
+    margin-bottom: 50px;
+}
+
+.pager--theme--light .pager__item--active .pager__link {
+    color: #fff;
+    background: #353538;
+}
+
+.pager--theme--light .pager__link:hover {
+    color: #fff;
+    background: #353538;
+}
+
+.service__img {
+    width: 30%;
+    margin-right: 7%;
+}
+
+.service__content {
+    flex: 1;
+}
+
+.service__title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 22px;  
+  color: #202123;
+}
+
+.service__desc {
+    line-height: 1.7;
+    margin-bottom: 30px;
+}
+
+.container--partners {
+    margin-bottom: 30px;
+    padding: 90px 0;
+}
+
+.inner__section {
+    background: #ffffff;
+    color: #202123;
+    padding: 95px 0;
+}
+
+.inner-selection--bg--grey {
+    background: #f4f5f5;
+}
+
+.inner-selection__title {
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 75px;
+    color: #202123;
+}
+
+
+.partners {
+    display: flex;  
+    flex-wrap: wrap;
+}
+
+.partners__link {
+    text-decoration: none;
+    display: flex;
+    width: 250px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    filter: grayscale(100%);
+}
+
+.partners__link:hover {
+    filter: grayscale(0%);
+}
+
+.partners__items {
+    margin-left: 35px;
+}
+
+.partners___items:nth-child(4n+1) {
+    margin-left: 0px;
+}
+
+.inner-footer__container {
+    padding: 45px 0;
+}
+
+.inner-footer {
+    margin-top: auto;
 }
