--- a/forms/first.css
+++ b/forms/first.css
@@ -9,3 +9,6 @@
 @import url('../blocks/padger.css');
 @import url('../blocks/footer.css');
 @import url('../blocks/decor-first.css');
+
+
+@import url('../blocks/decor-first.css');
